--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -1,7 +1,7 @@
 <div class="navbar" ng-controller="headerCtrl" style="width: 100%;margin-bottom:0px;padding-bottom: 60px">
     <div class="navbar-inner" style="width: 98%;position: fixed">
         <a class="brand" href="#" title="Wooice">
-            <img width="78" src="img/logo.jpg"/>
+            <img width="78" ng-src="img/logo.jpg"/>
         </a>
 
         <ul class="nav">
