--- a/app/partials/user/basicProfile.html
+++ b/app/partials/user/basicProfile.html
@@ -23,7 +23,7 @@
     <form name="the_form" class="form-horizontal" >
 
         <div class="span7">
-            <div style="padding-bottom: 10px" data-ng-show="{{message}}">
+            <div style="padding-bottom: 10px" ng-show="message">
                 <span class="{{messageClass}}">{{message}}</span>
             </div>
             <div>
