--- a/app/partials/userStream.html
+++ b/app/partials/userStream.html
@@ -2,7 +2,7 @@
 <div role="main" class="container-fluid">
 
     <div class="row-fluid">
-        <div class="span2" ng-controller="userBasicController">
+        <div class="span2" >
             <div style="padding-top: 20px;padding-left: 25px">
                 <img ng-src="{{user.profile.avatorUrl}}" width="200px" height="200px">
 
