--- a/app/css/app.css
+++ b/app/css/app.css
@@ -275,7 +275,7 @@ input.ng-dirty.ng-valid {
 .tags a{
     margin-left:20px;
     padding:0 10px 0 12px;
-    background:#0089e0;
+    background:#9E9E9E;
     color:#fff;
     text-decoration:none;
     -moz-border-radius-bottomright:4px;
@@ -294,7 +294,7 @@ input.ng-dirty.ng-valid {
     left:-10px;
     width:0;
     height:0;
-    border-color:transparent #0089e0 transparent transparent;
+    border-color:transparent #9E9E9E transparent transparent;
     border-style:solid;
     border-width:10px 10px 10px 0;
 }
