--- a/app/partials/upload.html
+++ b/app/partials/upload.html
@@ -125,7 +125,7 @@
                                     </div>
                                 </div>
                                 <div ng-show="defaultSound.recordType && defaultSound.recordType == 'original'">
-                                    <label tooltip="请填写音著协注册的版权注册号码，将用于版权的验证">版权注册号码</label>
+                                    <label tooltip="请填写音著协注册的版权注册号码，将用于版权的验证">版权注册编码(ISWC编码)</label>
                                     <div class="text-warning"
                                          ng-show="upload_form.rightNumber.$dirty && upload_form.rightNumber.$invalid">
                                         <small class="text-warning"
