--- a/app/partials/stream.html
+++ b/app/partials/stream.html
@@ -55,7 +55,7 @@
                 </div>
                 <div id="sound_player_body_{{sound.id}}" class='sound_player_body'>
                     <div id="sound_wave_{{sound.id}}" class='sound_player_wave' style="cursor:pointer">
-                        <canvas id="sound_wave_canvas_{{sound.id}}">
+                        <canvas id="sound_wave_canvas_{{sound.id}}" style="position:relative">
                         </canvas>
                     </div>
                 </div>
