--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -22,16 +22,23 @@
         </ul>
 
         <ul class="nav pull-right">
-            <li><a href="#" onclick="return false;"><i style="cursor:pointer;color:#e5e5e5" id='sound_player_pre_global'
-                                                       class='icon-step-backward'
+            <li><a href="#" onclick="return false;" title="上一首">
+                <i style="cursor:pointer;color:#e5e5e5" id='sound_player_pre_global'   class='icon-step-backward'
                                                        ng-click="playPre()"></i></a></li>
-            <li><a href="#" onclick="return false;"><i style="cursor:pointer;color:#e5e5e5"
-                                                       id='sound_player_button_global'
+            <li><a href="#" onclick="return false;">
+                <i style="cursor:pointer;color:#e5e5e5" id='sound_player_button_global'
                                                        class='sound_player_button icon-play'
                                                        ng-click="togglePause()"></i></a></li>
             <li style="padding-left: 0px;padding-right: 0px"><a id="cur_sound" style="padding-left: 0px;padding-right: 0px"></a></li>
-            <li style="padding-right: 40px"><a href="#" onclick="return false;"><i style="cursor:pointer;color:#e5e5e5" id='sound_player_next_global'
+            <li style="padding-right: 10px"><a href="#" onclick="return false;" title="下一首"><i style="cursor:pointer;color:#e5e5e5" id='sound_player_next_global'
                                                        class='icon-step-forward' ng-click="playNext()"></i></a>
+            </li>
+            <li style="padding-right: 40px"><a href="#" onclick="return false;" title="{{playModes[playMode]}}" id='play_style' ng-click="changePlayStyle()">
+                <i style="cursor:pointer;color:#e5e5e5" class='icon-list-ol'  ng-show="playMode == 0"></i>
+                <i style="cursor:pointer;color:#e5e5e5" class='icon-exchange' ng-show="playMode == 1"></i>
+                <i style="cursor:pointer;color:#e5e5e5" class='icon-random' ng-show="playMode == 2"></i>
+                <i style="cursor:pointer;color:#e5e5e5" class='icon-minus-sign-alt' ng-show="playMode == 3"></i>
+            </a>
             </li>
             <li style="border-left-width: 1px;border-left-style: solid;border-left-color: rgba(0, 0, 0, 0.498039);"><a
                     href="#" onclick="return false;" ng-click="goto('/profile')"><i class="icon-cog"></i></a></li>
