--- a/app/partials/sound.html
+++ b/app/partials/sound.html
@@ -38,6 +38,14 @@
                     <div id="sound_owner_{{sound.id}}">
                         <a class='sound_owner ' href="{{sound.owner.route}}" ng-show="mode == 'default'">{{sound.owner.alias}}</a>
                         <a class='sound_owner ' href="{{sound.owner.route}}" ng-show="mode == 'player'" target="_blank">{{sound.owner.alias}}</a>
+
+                        <div class="pull-right" style="font-size: 10px"  ng-show="mode == 'default'">
+                            <a href="#/infringement?alias={{sound.alias}}" tooltip="版权侵权举报"><i class="icon-ban-circle"></i> 侵权举报</a><br>
+                            <a href="#" onclick="return false;" tooltip="低俗，反动等内容举报" ng-click="reportSound()" style="text-decoration: none">
+                                <i class="icon-thumbs-down-alt" ng-show="!sound.reported"></i>
+                                <i class="icon-thumbs-down" ng-show="sound.reported"></i>
+                                内容举报</a>
+                        </div>
                     </div>
                     <div id="sound_title_{{sound.id}}">
                                     <span ng-if="sound.title.readonly">
@@ -123,7 +131,7 @@
                                                                      value='<iframe width="100%" height="188" scrolling="no" frameborder="no" src="{{config.site.url}}#/player/{{sound.alias}}"></iframe>'>
                 </div>
                 <a href="#" class="button button-small button-rounded button-flat action-button"
-                   ng-show="mode == 'default' && userService.validateRolePro() && userService.validateRolesPro()"
+                   ng-show="mode == 'default' && (userService.validateRolePro() || userService.validateRolesPro())"
                    onclick="return false;" ng-click="togglePromote(sound.id)"><i
                         class="icon-star"></i>
                     <span ng-show="!sound.priority || sound.priority == 0">优先</span>
