--- a/app/css/app.css
+++ b/app/css/app.css
@@ -329,3 +329,59 @@ input.ng-dirty.ng-valid {
 .tip .qtip-content{
     font-size: 9px;
 }
+
+
+/* back to top icon*/
+#back_top {
+    position: fixed;
+    bottom: 150px;
+    right: 70px;
+}
+
+#back_top a {
+    width: 50px;
+    display: block;
+    text-align: center;
+    font: 11px/100% Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    text-decoration: none;
+
+    /* transition */
+    -webkit-transition: 1s;
+    -moz-transition: 1s;
+    transition: 1s;
+}
+#back_top a:hover {
+}
+
+/* arrow icon (span tag) */
+#back_top span {
+    width: 50px;
+    height: 50px;
+    display: block;
+
+    -moz-opacity: 0.60;
+    opacity: 0.60;
+    filter: alpha(opacity=60);
+
+    margin-bottom: 7px;
+    background: #FFFFFF url(../images/solr/up-arrow.png) no-repeat center center;
+
+    /* rounded corners */
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
+
+    /* transition */
+    -webkit-transition: 1s;
+    -moz-transition: 1s;
+    transition: 1s;
+}
+#back_top a:hover span {
+    background-color: #EBEBEB;
+    background-color: #FFFFFF\9;
+    *background-color: #FFFFFF;
+    -moz-opacity: 1;
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
