--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -23,18 +23,21 @@
 
         <ul class="nav pull-right">
             <li><a href="#" onclick="return false;" title="上一首">
-                <i style="cursor:pointer;color:#e5e5e5" id='sound_player_pre_global'   class='icon-step-backward'
-                                                       ng-click="playPre()"></i></a></li>
+                <i style="cursor:pointer;color:#e5e5e5" id='sound_player_pre_global' class='icon-step-backward'
+                   ng-click="playPre()"></i></a></li>
             <li><a href="#" onclick="return false;">
                 <i style="cursor:pointer;color:#e5e5e5" id='sound_player_button_global'
-                                                       class='sound_player_button icon-play'
-                                                       ng-click="togglePause()"></i></a></li>
-            <li style="padding-left: 0px;padding-right: 0px"><a id="cur_sound" style="padding-left: 0px;padding-right: 0px"></a></li>
-            <li style="padding-right: 10px"><a href="#" onclick="return false;" title="下一首"><i style="cursor:pointer;color:#e5e5e5" id='sound_player_next_global'
-                                                       class='icon-step-forward' ng-click="playNext()"></i></a>
+                   class='sound_player_button icon-play'
+                   ng-click="togglePause()"></i></a></li>
+            <li style="padding-left: 0px;padding-right: 0px"><a id="cur_sound"
+                                                                style="padding-left: 0px;padding-right: 0px"></a></li>
+            <li style="padding-right: 10px"><a href="#" onclick="return false;" title="下一首"><i
+                    style="cursor:pointer;color:#e5e5e5" id='sound_player_next_global'
+                    class='icon-step-forward' ng-click="playNext()"></i></a>
             </li>
-            <li style="padding-right: 40px"><a href="#" onclick="return false;" title="{{playModes[playMode]}}" id='play_style' ng-click="changePlayStyle()">
-                <i style="cursor:pointer;color:#e5e5e5" class='icon-list-ol'  ng-show="playMode == 0"></i>
+            <li style="padding-right: 40px"><a href="#" onclick="return false;" title="{{playModes[playMode]}}"
+                                               id='play_style' ng-click="changePlayStyle()">
+                <i style="cursor:pointer;color:#e5e5e5" class='icon-list-ol' ng-show="playMode == 0"></i>
                 <i style="cursor:pointer;color:#e5e5e5" class='icon-exchange' ng-show="playMode == 1"></i>
                 <i style="cursor:pointer;color:#e5e5e5" class='icon-random' ng-show="playMode == 2"></i>
                 <i style="cursor:pointer;color:#e5e5e5" class='icon-minus-sign-alt' ng-show="playMode == 3"></i>
@@ -42,9 +45,44 @@
             </li>
             <li style="border-left-width: 1px;border-left-style: solid;border-left-color: rgba(0, 0, 0, 0.498039);"><a
                     href="#" onclick="return false;" ng-click="goto('/profile')"><i class="icon-cog"></i></a></li>
-            <li style="padding-right: 90px"><a href="#" onclick="return false;" ng-click="goto('/upload')"><i class="icon-cloud-upload"></i></a>
+            <li style="padding-right: 90px"><a href="#" onclick="return false;" ng-click="goto('/upload')"><i
+                    class="icon-cloud-upload"></i></a>
             </li>
+            <li><a href="#feedback" onclick="return false;" data-toggle="modal"><i class="icon-edit"></i></a></li>
             <li><a href="#" onclick="return false;" ng-click="logout()"><i class="icon-signout"></i></a></li>
         </ul>
+    </div>
+
+    <div id="feedback" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+         aria-hidden="true">
+        <form name="feedback" style="margin-bottom: 0px">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <b id="myModalLabel" style="font-size: 21px">意见反馈</b>
+            </div>
+            <div class="modal-body" style="padding-left: 40px">
+                <div>
+                    <label>功能</label>
+                    <input ng-model="feedback.function">
+                </div>
+
+                <div style="padding-top: 10px">
+                    <div class="text-warning"
+                         ng-show="feedback.feedback_content.$dirty && feedback.feedback_content.$invalid">
+                        <small class="text-warning"
+                               ng-show="feedback.feedback_content.$error.minlength">
+                            为了保证反馈内容清晰完整，请至少填写15个字符
+                        </small>
+                    </div>
+                    <label>改善意见</label>
+                    <textarea ng-model="feedback_content" name="feedback_content" required rows="8" style="width: 450px"
+                              ng-minlength=15></textarea>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+                <button class="btn btn-primary" ng-click="sendFeedback()" ng-disabled="feedback.$invalid">保存</button>
+            </div>
+        </form>
     </div>
 </div>
